--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-image-view": "^2.1.7",
     "react-native-maps": "~0.25.0",
+    "react-native-open-maps": "^0.3.4",
+    "react-native-rating": "^2.0.4",
     "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-web": "^0.11.7",
